<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.officeslip.ui.login.LoginViewModel" />

        <variable
            name="activity"
            type="com.officeslip.ui.login.LoginActivity" />
        <variable
            name="sysInfo"
            type="com.officeslip.SysInfo" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.4"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/view_imageLogo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/login_banner"
                android:padding="70dp"

                />
            <TextView
                android:id="@+id/view_textServerMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_dark"
                />


            <TextView
                android:id="@+id/view_tvAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="50dp"
                android:text="@{viewModel.alert}"
                android:textSize="12sp"
                android:textColor="@color/activity_bg"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/view_imgIcon"
            app:layout_constraintTop_toBottomOf="@+id/layout_top"
            app:layout_constraintBottom_toTopOf="@id/layout_loginArea"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_imgicon"
            android:elevation="5dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_loginArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/activity_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.6"
            tools:layout_editor_absoluteX="85dp">




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_layoutLogin"
                android:layout_width="240dp"
                android:layout_height="240dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >


                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toLeftOf="@id/view_switchAutoLogin"
                    app:layout_constraintTop_toTopOf="@id/view_switchAutoLogin"
                    app:layout_constraintBottom_toBottomOf="@id/view_switchAutoLogin"
                    android:text="@string/toggle_autologin"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="10dp"

                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/view_switchAutoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.autoLogin, default=true}"
                    />

                <TextView
                    android:id="@+id/view_textEmpNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/view_switchAutoLogin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/id"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    />


                <EditText
                    android:id="@+id/view_etID"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_edittext_border"
                    android:hint="@string/input_id"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@={viewModel.id}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_textEmpNo" />


                <TextView
                    android:id="@+id/view_textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/view_etID"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"
                    />
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/view_etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_textPassword"
                    android:textColor="@android:color/white"
                    android:background="@drawable/login_edittext_border"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:minLines="1"
                    android:inputType="textPassword"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@={viewModel.password}"
                    android:hint="@string/input_password"
                    android:textColorHint="@android:color/darker_gray"
                    />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/view_btnResetPassword"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/mtl_btnLogin"
                    app:mrl_rippleOverlay="true">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/view_btnLogin"
                        android:text="@string/login"
                        android:layout_gravity="center"
                        android:background="@drawable/login_button_bg"
                        android:textColor="@color/activityLoginBg"
                        android:onClick="@{() -> viewModel.onLogin()}"
                        android:layout_marginBottom="4dp"
                        />
                </com.balysv.materialripple.MaterialRippleLayout>

                <Button
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/view_btnResetPassword"
                    android:text="@string/resetPW"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:background="@color/transparent"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> activity.confirmResetPassword()}"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>